<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Record_From_DB" Id="{937933f9-b1fa-4df9-b37d-01dd83e13d4c}">
    <Declaration><![CDATA[TYPE Record_From_DB :
STRUCT
	Udc 			: STRING(20);
	ArticleCode 	: STRING(20);
	Choice 			: STRING(5);
	Tone 				: STRING(5);
	Caliber 			: STRING(5);
	Length_mm 			: DINT;
	Width_mm 			: DINT;
	Thickness_mm 		: DINT;
	Quantity  			: LREAL;
	ArticleDescription 	: STRING(50);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>